# similaridade_texto

./: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  main.py  pyproject.toml
